# vercosa-ai-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  mission_proposal.md
.github/workflows/: ci.yml
.opencode/: opencode.json
docs/: agent-orchestrator.md  canonicalizer.md  capabilities-skills-tools.md  cli.md  comparacoes.md  context-router-token-budget.md  development.md  guardian-engine.md  knowledge-hub.md  mission-runner.md  opencode-runtime-adapter.md  persistence-layer.md  provider-gateway.md  task-queue.md  workflow-engine.md
docs/alignment/: roadmap.md  (+7 more)
knowledge/: vision.md
scripts/: vaf-run-batch-safe.sh  vaf-run-next-safe.sh  vaf-run-one-mission.sh  vaf-start-background.sh  vaf-status.sh  vaf-stop-background.sh  vaf-worker.sh
tests/: test_agent_contracts.py  test_agent_execution_governance_0107.py  test_agent_orchestrator.py  test_agent_registry.py  test_audit_decision_events.py  test_audit_event_log_contracts.py  test_audit_event_persistence.py  test_audit_mission_events.py  test_canonicalizer_contracts.py  test_canonicalizer_engine.py  test_canonicalizer_markdown.py  test_capability_contracts.py  test_capability_resolution.py  test_capability_skill_tool_provider_dry_run.py  test_cli.py  test_cli_alpha_readiness.py  test_cli_batch_summary.py  test_cli_doctor.py  test_cli_missions.py  test_cli_operacional_inicial.py  test_context_contracts.py  test_context_knowledge_integration.py  test_context_router_mvp.py  test_filesystem_persistence.py  test_guardian_context_package_checks.py  test_guardian_contracts.py  test_guardian_engine.py  test_knowledge_contracts.py  test_knowledge_markdown.py  test_knowledge_search.py  test_knowledge_store.py  test_markdown_links.py  test_mission_contract.py  test_mission_prompt_composition.py  test_mission_queue.py  test_mission_runner.py  test_mission_runner_guardian.py  test_mission_workflow_task_integration.py  test_model_selection.py  test_opencode_runtime_adapter.py  (+23 more)
(+305 files in other folders)
