[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vercosa-ai-framework"
version = "0.1.0"
description = "Specification-first, provider-agnostic AI software engineering framework."
readme = "docs/development.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Vercosa AI Framework Contributors" },
]
keywords = ["ai", "framework", "specification-first", "software-engineering"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
vercosa = "vercosa_ai_framework.cli:main"
vaf = "vercosa_ai_framework.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/vercosa_ai_framework"]
